--- a/css/styles-ukraine.css
+++ b/css/styles-ukraine.css
@@ -1,140 +1,130 @@
 /* Lenis recommended CSS */
 
 html.lenis {
-    height: auto;
-  }
+  height: auto;
+}
 
-  .lenis.lenis-smooth {
-    scroll-behavior: auto !important;
-  }
+.lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+}
 
-  .lenis.lenis-smooth [data-lenis-prevent] {
-    overscroll-behavior: contain;
-  }
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
 
-  .lenis.lenis-stopped {
-    overflow: hidden;
-  }
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
 
-  .lenis.lenis-scrolling iframe {
-    pointer-events: none;
-  }
+.lenis.lenis-scrolling iframe {
+  pointer-events: none;
+}
 
-  /* My custom styles */
+/* My custom styles */
 
-  * {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -o-font-smoothing: antialiased;
-  }
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -o-font-smoothing: antialiased;
+}
 
-  body {
-    overflow-x: hidden !important;
-    position: relative;
-    width: 100%;
-  }
+.form-input {
+  border: none !important;
+}
 
-  h2 {
-    font-variant-ligatures: common-ligatures;
-  }
+.select-button,
+.select-option {
+  transform: scale(1);
+  transition: transform 0.3s cubic-bezier(.23, 1, .32, 1);
+}
 
-  .form-input {
-    border: none !important;
-  }
+.select-button:hover,
+.select-option:hover {
+  transform: scale(1.02);
+}
 
-  .select-button,
-  .select-option {
-    transform: scale(1);
-    transition: transform 0.3s cubic-bezier(.23, 1, .32, 1);
-  }
+.select-button::before {
+  font-family: Geologica Variable, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  content: "Ваш план:";
+}
 
-  .select-button:hover,
-  .select-option:hover {
-    transform: scale(1.02);
-  }
+.select-option:after {
+  color: #ff6b00;
+  font-family: Geologica Variable, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 16px;
+}
 
+.select-option:nth-of-type(1):after {
+  content: "1000 ₴ / місяць";
+}
+
+.select-option:nth-of-type(2):after {
+  content: "5000 ₴ / місяць";
+}
+
+.select-option:nth-of-type(3):after {
+  content: "15000 ₴ / місяць";
+}
+
+@media screen and (max-width: 767px) {
   .select-button::before {
-    font-family: Geologica Variable, sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    content: "Ваш план:";
+    font-size: 12px;
+    line-height: 12px;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  #select-list-h2 {
+    margin-bottom: 8px;
+  }
+}
+
+@media (max-width: 991px) and (min-width: 768px) {
+  .select-button::before {
+    font-size: 15px;
+    line-height: 20px;
+  }
+}
+
+@media screen and (max-width: 370px),
+screen and (max-height: 700px) {
+
+  .hero-slogan {
+    margin-top: -40px;
   }
 
-  .select-option:after {
-    color: #ff6b00;
-    font-family: Geologica Variable, sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 16px;
+  .popup-window {
+    height: 560px;
+    padding-top: 80px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
-  .select-option:nth-of-type(1):after {
-    content: "1000 ₴ / місяць";
+  .form-heading,
+  .form-heading-list {
+    margin-bottom: 16px;
+    font-size: 32px;
+    line-height: 32px;
   }
 
-  .select-option:nth-of-type(2):after {
-    content: "5000 ₴ / місяць";
+  .form-step-2 .checkbox-label {
+    margin-top: 16px;
+    margin-bottom: 16px;
   }
 
-  .select-option:nth-of-type(3):after {
-    content: "15000 ₴ / місяць";
+  .select-button {
+    padding-left: 20px;
   }
 
-  @media screen and (max-width: 767px) {
-    .select-button::before {
-      font-size: 12px;
-      line-height: 12px;
-    }
+  .form-checkbox {
+    margin-bottom: 16px;
+    margin-top: -4px;
   }
-
-  @media screen and (max-width: 991px) {
-    #select-list-h2 {
-      margin-bottom: 8px;
-    }
-  }
-
-  @media (max-width: 991px) and (min-width: 768px) {
-    .select-button::before {
-      font-size: 15px;
-      line-height: 20px;
-    }
-  }
-
-  @media screen and (max-width: 370px),
-  screen and (max-height: 700px) {
-
-    .hero-slogan {
-      margin-top: -40px;
-    }
-
-    .popup-window {
-      height: 560px;
-      padding-top: 80px;
-      margin-left: 10px;
-      margin-right: 10px;
-    }
-
-    .form-heading,
-    .form-heading-list {
-      margin-bottom: 16px;
-      font-size: 32px;
-      line-height: 32px;
-    }
-
-    .form-step-2 .checkbox-label {
-      margin-top: 16px;
-      margin-bottom: 16px;
-    }
-
-    .select-button {
-      padding-left: 20px;
-    }
-
-    .form-checkbox {
-      margin-bottom: 16px;
-      margin-top: -4px;
-    }
-  }
+}
